# PositronicPython

./: README.md  pyproject.toml
positronic_python/: ai_interface.py  ai_interface.pyi  ai_service.py  configs_reader.py  schema.py
positronic_python/examples/: prompt_engeneer.py
